<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#4CAF50"
        android:padding="10dp"
        android:text="Görev Ekle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/radioYuksek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yuksek_oncelik" />

        <RadioButton
            android:id="@+id/radioOrta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/orta_oncelik" />

        <RadioButton
            android:id="@+id/radioDusuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dusuk_oncelik" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gorevTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gorev_title"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gorevTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>